# graceful-exit-python

./: Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml
src/: main.py
src/domain/: task.py
src/helpers/: producer.py  runner.py
src/usecases/: number_generator.py
